--- a/.generator.yml
+++ b/.generator.yml
@@ -1,7 +1,7 @@
 # Changes here will be overwritten by Copier
-_commit: ec8a823
+_commit: 3c38a44
 _src_path: https://github.com/fastapi-mvc/copier-generator
-copyright_date: 2022
+copyright_date: '2022'
 generator: project
 generator_name: project
 license: MIT
