--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Generate poetry.lock
         if: steps.lock-cache.outputs.cache-hit != 'true'
         working-directory: ./example
-        run: nix-shell -p poetry --run "poetry lock --no-update"
+        run: NIXPKGS_ALLOW_INSECURE=1 nix-shell -p poetry --run "poetry lock --no-update"
       - name: Set short commit SHA
         run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
       - name: Push generated test project
