Update workflows triggers

--- a/template/{% if github_actions %}.github{% endif %}/workflows/main.yml
+++ b/template/{% if github_actions %}.github{% endif %}/workflows/main.yml
@@ -2,7 +2,11 @@ name: CI
 
 on:
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
 
 env:
   POETRY_HOME: /opt/poetry
