--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Generate poetry.lock
         if: steps.lock-cache.outputs.cache-hit != 'true'
         working-directory: ./example
-        run: nix-shell -I nixpkgs=https://github.com/NixOS/nixpkgs/archive/04a75b2eecc0acf6239acf9dd04485ff8d14f425.tar.gz -p poetry --run "poetry lock --no-update"
+        run: nix-shell -p poetry --run "poetry lock --no-update"
       - name: Set short commit SHA
         run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
       - name: Push generated test project
