--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ on:
       - '.github/workflows/**'
       - 'monkeypatch.py'
 
+env:
+  NIX_CHANNEL: nixpkgs=channel:nixos-22.11
+  NIX_INSTALL_URL: https://releases.nixos.org/nix/nix-2.13.3/install
+
 jobs:
   # This job checks if an identical workflow is being triggered by different
   # event and skips it. For instance there is no need to run the same pipeline
@@ -45,7 +49,8 @@ jobs:
       - name: Install Nix ❄️
         uses: cachix/install-nix-action@v18
         with:
-          nix_path: nixpkgs=channel:nixos-22.11
+          nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v12
         with:
